# l24

./: .gitignore  Cargo.toml  GNUmakefile  limine.conf  linker.ld
.cargo/: config.toml
iso_root/boot/: l24r
scripts/: create-iso.sh
src/: early_print.rs  limine.rs  main.rs
