[package]
name = "l24r"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.3.1"
uart_16550 = "0.2.0"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
debug = true  

[profile.release]
panic = "abort"

[package.metadata.scripts]
iso = "scripts/create-iso.sh"
